--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@ aria-label="Slide 3"></button>
 <div class="carousel-caption d-none d-md-block">
 <h5>Third slide label</h5>
 <p>Some representative placeholder content for the third slide.</p>
+<div class="carousel-item">
+  <img src="https://picsum.photos/id/233/1080/300" class="d-block w-100" alt="...">
+  <div class="carousel-caption d-none d-md-block">
+  <h5>Second slide label</h5>
+  <p>Some representative placeholder content for the second slide.</p>
+  </div>
+  </div>
+  <div class="carousel-item">
+    <img src="https://picsum.photos/id/234/1080/300" class="d-block w-100" alt="...">
+    <div class="carousel-caption d-none d-md-block">
+    <h5>Second slide label</h5>
+    <p>Some representative placeholder content for the second slide.</p>
+    </div>
+    </div>
 </div>
 </div>
 </div>
