--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ aria-current="true" aria-label="Slide 1"></button>
 aria-label="Slide 2"></button>
 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
 aria-label="Slide 3"></button>
+<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+aria-label="Slide 4"></button>
+<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+aria-label="Slide 5"></button>
 </div>
 <div class="carousel-inner">
 <div class="carousel-item active">
@@ -61,6 +65,20 @@ aria-label="Slide 3"></button>
 <div class="carousel-caption d-none d-md-block">
 <h5>Third slide label</h5>
 <p>Some representative placeholder content for the third slide.</p>
+<div class="carousel-item">
+  <img src="https://picsum.photos/id/233/1080/300" class="d-block w-100" alt="...">
+  <div class="carousel-caption d-none d-md-block">
+  <h5>Second slide label</h5>
+  <p>Some representative placeholder content for the fourth slide.</p>
+  </div>
+  </div>
+  <div class="carousel-item">
+    <img src="https://picsum.photos/id/234/1080/300" class="d-block w-100" alt="...">
+    <div class="carousel-caption d-none d-md-block">
+    <h5>Second slide label</h5>
+    <p>Some representative placeholder content for the fifth slide.</p>
+    </div>
+    </div>
 </div>
 </div>
 </div>
