--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@ aria-label="Slide 5"></button>
 <div class="carousel-item">
   <img src="https://picsum.photos/id/233/1080/300" class="d-block w-100" alt="...">
   <div class="carousel-caption d-none d-md-block">
-  <h5>Second slide label</h5>
+  <h5>Fourth slide label</h5>
   <p>Some representative placeholder content for the fourth slide.</p>
   </div>
   </div>
   <div class="carousel-item">
     <img src="https://picsum.photos/id/234/1080/300" class="d-block w-100" alt="...">
     <div class="carousel-caption d-none d-md-block">
-    <h5>Second slide label</h5>
+    <h5>Fifth slide label</h5>
     <p>Some representative placeholder content for the fifth slide.</p>
     </div>
     </div>
