--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1>This is Home Page</h1>
+        <h1>This is My Homie Page</h1>
       </div>
     </div>
   </div>
