--- a/index.html
+++ b/index.html
@@ -10,85 +10,99 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-<div class="container-fluid">
-<a class="navbar-brand" href="index.html">Git Activity</a>
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav">
-<li class="nav-item">
-<a class="nav-link" aria-current="page" href="index.html">Home</a>
-</li>
-<li class="nav-item">
-<a class="nav-link active" href="login.html">Login</a>
-</li>
-<li class="nav-item">
-<a class="nav-link active" href="register.html">Registration</a>
-</li>
-</ul>
-</div>
-</div>
-</nav>
-<div id="carouselExampleCaptions" class="carousel slide">
-<div class="carousel-indicators">
-<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-aria-current="true" aria-label="Slide 1"></button>
-<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-aria-label="Slide 2"></button>
-<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-aria-label="Slide 3"></button>
-</div>
-<div class="carousel-inner">
-<div class="carousel-item active">
-<img src="https://picsum.photos/id/230/1080/300" class="d-block w-100" alt="...">
-<div class="carousel-caption d-none d-md-block">
-<h5>First slide label</h5>
-<p>Some representative placeholder content for the first slide.</p>
-</div>
-</div>
-<div class="carousel-item">
-<img src="https://picsum.photos/id/231/1080/300" class="d-block w-100" alt="...">
-<div class="carousel-caption d-none d-md-block">
-<h5>Second slide label</h5>
-<p>Some representative placeholder content for the second slide.</p>
-</div>
-</div>
-<div class="carousel-item">
-<img src="https://picsum.photos/id/232/1080/300" class="d-block w-100" alt="...">
-<div class="carousel-caption d-none d-md-block">
-<h5>Third slide label</h5>
-<p>Some representative placeholder content for the third slide.</p>
-<div class="carousel-item">
-  <img src="https://picsum.photos/id/233/1080/300" class="d-block w-100" alt="...">
-  <div class="carousel-caption d-none d-md-block">
-  <h5>Fourth slide label</h5>
-  <p>Some representative placeholder content for the fourth slide.</p>
-  </div>
-  </div>
-  <div class="carousel-item">
-    <img src="https://picsum.photos/id/234/1080/300" class="d-block w-100" alt="...">
-    <div class="carousel-caption d-none d-md-block">
-    <h5>Fifth slide label</h5>
-    <p>Some representative placeholder content for the fifth slide.</p>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Git Activity</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="login.html">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="register.html">Registration</a>
+          </li>
+        </ul>
+      </div>
     </div>
+    </nav>
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+          aria-label="Slide 5"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://picsum.photos/id/230/1080/300" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://picsum.photos/id/231/1080/300" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://picsum.photos/id/232/1080/300" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://picsum.photos/id/233/1080/300" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Fourth slide label</h5>
+            <p>Some representative placeholder content for the fourth slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://picsum.photos/id/234/1080/300" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Fifth slide label</h5>
+            <p>Some representative placeholder content for the fifth slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-</div>
-</div>
-</div>
-<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-<span class="visually-hidden">Previous</span>
-</button>
-<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-<span class="carousel-control-next-icon" aria-hidden="true"></span>
-<span class="visually-hidden">Next</span>
-</button>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>This is My Homie Page</h1>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
