--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       <div class="row">
         <div class="col-12">
           <h1>This is My Homie Page</h1>
+          <p>This message is from feeeetureee 2</p>
         </div>
       </div>
     </div>
